--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@independer/ng-modal": "^1.1.2",
     "angular-custom-dropdown": "^1.1.1",
     "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "^3.3.7",
